objects/Work_Request_Solution_History__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Delivered_Date__c</fullName>
        <label>Actual Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Delivered_PDK_Version__c</fullName>
        <label>Actual Delivered PDK Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Deadline_Date__c</fullName>
        <label>Approval Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Details__c</fullName>
        <label>Resolution Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_File_URL__c</fullName>
        <label>Resolution File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Target_Delivery_PDK_version__c</fullName>
        <label>Target Delivery PDK version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targetted_Delivery_Date__c</fullName>
        <label>Targetted Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Request__c</fullName>
        <label>Work Request</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipLabel>Work Request Solution History</relationshipLabel>
        <relationshipName>Work_Request_Solution_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Request Solution History</label>
    <nameField>
        <displayFormat>WRS-{0000}</displayFormat>
        <label>Solution No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Request Solution History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>